--- a/background.html
+++ b/background.html
@@ -138,7 +138,7 @@
 
 
   <!-- DIALOGS-->
-  <script type='text/javascript' src='js/views/update_group_dialog_view.js'></script>
+  <!-- <script type='text/javascript' src='js/views/update_group_dialog_view.js'></script> -->
   <script type='text/javascript' src='js/views/invite_contacts_dialog_view.js'></script>
   <script type='text/javascript' src='js/views/admin_leave_closed_group_dialog_view.js'></script>
 
