--- a/background.html
+++ b/background.html
@@ -139,10 +139,10 @@
 
   <!-- DIALOGS-->
   <!-- <script type='text/javascript' src='js/views/update_group_dialog_view.js'></script> -->
-  <script type='text/javascript' src='js/views/invite_contacts_dialog_view.js'></script>
-  <script type='text/javascript' src='js/views/admin_leave_closed_group_dialog_view.js'></script>
+  <!-- <script type='text/javascript' src='js/views/invite_contacts_dialog_view.js'></script> -->
+  <!-- <script type='text/javascript' src='js/views/admin_leave_closed_group_dialog_view.js'></script> -->
 
-  <script type='text/javascript' src='js/views/user_details_dialog_view.js'></script>
+  <!-- <script type='text/javascript' src='js/views/user_details_dialog_view.js'></script> -->
   <script type='text/javascript' src='js/views/session_id_reset_view.js'></script>
 
   <!-- CRYPTO -->
