fix about window localized string

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <html>
-<head>
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none';
+  <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none';
             child-src 'self';
             connect-src 'self' https: wss:;
             font-src 'self';
@@ -11,44 +12,44 @@
             media-src 'self' blob:;
             object-src 'none';
             script-src 'self';
-            style-src 'self' 'unsafe-inline';">
-  <link href="stylesheets/manifest.css" rel="stylesheet" type="text/css" />
-  <style>
-    body {
-      text-align: center;
-      background-color: rgba(0, 0, 0);
-      color: white;
-      font-size: 14px;
-    }
+            style-src 'self' 'unsafe-inline';"
+    />
+    <link href="stylesheets/manifest.css" rel="stylesheet" type="text/css" />
+    <style>
+      body {
+        text-align: center;
+        background-color: rgba(0, 0, 0);
+        color: white;
+        font-size: 14px;
+      }
 
-    img {
-      margin-top: 1em;
-      padding: 12px;
-    }
+      img {
+        margin-top: 1em;
+        padding: 12px;
+      }
 
-    a {
-      color: white;
-    }
-  </style>
-</head>
+      a {
+        color: white;
+      }
+    </style>
+  </head>
 
-<body>
-  <img src='images/session/session_icon.png' width='250' height='250'>
+  <body>
+    <img src="images/session/session_icon.png" width="250" height="250" />
 
-  <div class='version'></div>
-  <div class='commitHash'></div>
-  <div class='environment'></div>
-  <div>
-    <a href="https://getsession.org">getsession.org</a>
-  </div>
-  <br>
-  <div>
-    <a class="privacy" href="https://getsession.org/privacy-policy">Privacy Policy</a><br />
-    <a class="privacy" href="https://getsession.org/terms-of-service/">Terms of Service</a>
-  </div>
+    <div class="version"></div>
+    <div class="commitHash"></div>
+    <div class="environment"></div>
+    <div>
+      <a href="https://getsession.org">getsession.org</a>
+    </div>
+    <br />
+    <div>
+      <a class="privacy" href="https://getsession.org/privacy-policy">Privacy Policy</a><br />
+      <a class="privacy" href="https://getsession.org/terms-of-service/">Terms of Service</a>
+    </div>
 
-  <script type='text/javascript' src='node_modules/jquery/dist/jquery.js'></script>
-  <script type='text/javascript' src='js/about_start.js'></script>
-</body>
-
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="js/about_start.js"></script>
+  </body>
 </html>
