nodefetch headers as on mobile + cleanup worker code

--- a/background.html
+++ b/background.html
@@ -13,7 +13,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'none';
             child-src 'self';
-            connect-src 'self' https: wss: blob:;
+            connect-src 'self' https: wss: blob: data:;
             font-src 'self';
             form-action 'self';
             frame-src 'none';
