--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html class='no-js' lang='en'>
-    <head>
-        <meta charset='utf-8'>
-        <meta content='width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0' name='viewport'>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Session</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href='/images/session/session_icon_128.png' rel='shortcut icon'>
-        <link href="/stylesheets/manifest.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="js/chromium.js"></script>
-    </head>
-    <body id="signal-container" class='signal index'>
-        <div class='app-loading-screen'>
-            <div class="content session-full-logo">
-                <img src="images/session/brand.svg" class="session-brand-logo" />
-                <img src="images/session/session-text.svg" class="session-text-logo" />
-            </div>
-        </div>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
+      name="viewport"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Session</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/images/session/session_icon_128.png" rel="shortcut icon" />
+    <link href="/stylesheets/manifest.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body id="signal-container" class="signal index">
+    <div class="app-loading-screen">
+      <div class="content session-full-logo">
+        <img src="images/session/brand.svg" class="session-brand-logo" />
+        <img src="images/session/session-text.svg" class="session-text-logo" />
+      </div>
+    </div>
+    <script type="text/javascript" src="js/index.js"></script>
+  </body>
 </html>
