cleanup translated strings

--- a/debug_log.html
+++ b/debug_log.html
@@ -27,7 +27,7 @@
       </div>
       <textarea spellcheck='false' rows='5'></textarea>
       <div class='buttons'>
-        <button class='grey submit'>{{ submit }}</button>
+        <button class='grey submit'>{{ saveLogToDesktop }}</button>
       </div>
       <div class='result'>
       </div>
