--- a/background.html
+++ b/background.html
@@ -50,6 +50,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="js/background.js"></script>
+    <script type="text/javascript" src="js/main_start.js"></script>
   </body>
 </html>
