--- a/background.html
+++ b/background.html
@@ -42,6 +42,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="js/main_start.js"></script>
+    <script type="text/javascript" src="dist/js/electron-renderer.js"></script>
   </body>
 </html>
