test with webpack - not working

--- a/background.html
+++ b/background.html
@@ -29,9 +29,6 @@
 
     <script type="text/javascript" src="js/components.js"></script>
     <script type="text/javascript" src="js/libtextsecure.js"></script>
-
-    <script type="text/javascript" src="js/views/react_wrapper_view.js"></script>
-    <script type="text/javascript" src="js/views/whisper_view.js"></script>
   </head>
 
   <body>
@@ -42,6 +39,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="dist/js/electron-renderer.js"></script>
+    <script type="text/javascript" src="dist/electron_renderer.js"></script>
   </body>
 </html>
