--- a/password.html
+++ b/password.html
@@ -1,7 +1,8 @@
 <html>
-<head>
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none';
+  <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none';
             child-src 'self';
             connect-src 'self' https: wss:;
             font-src 'self';
@@ -12,24 +13,19 @@
             object-src 'none';
             script-src 'self';
             style-src 'self' 'unsafe-inline';"
-  >
-  <link href="stylesheets/manifest.css" rel="stylesheet" type="text/css" />
-  <style>
-  </style>
+    />
+    <link href="stylesheets/manifest.css" rel="stylesheet" type="text/css" />
+    <style></style>
 
-
-  <script type='text/javascript' src='js/components.js'></script>
-  <script type='text/javascript' src='js/views/whisper_view.js'></script>
-  <script type='text/javascript' src='js/views/react_wrapper_view.js'></script>
-  <script type='text/javascript' src='js/views/password_view.js'></script>
-</head>
-<body>
-  <div class='app-loading-screen'>
-    <div class="content session-full-logo">
+    <script type="text/javascript" src="js/components.js"></script>
+  </head>
+  <body>
+    <div class="app-loading-screen">
+      <div class="content session-full-logo">
         <img src="images/session/brand.svg" class="session-brand-logo" />
         <img src="images/session/session-text.svg" class="session-text-logo" />
+      </div>
     </div>
-  </div>
-  <script type='text/javascript' src='js/password_start.js'></script>
-</body>
+    <script type="text/javascript" src="js/password_start.js"></script>
+  </body>
 </html>
