--- a/background.html
+++ b/background.html
@@ -39,6 +39,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="dist/electron_renderer.js"></script>
+    <script type="text/javascript" src="ts/mains/main_renderer.js"></script>
   </body>
 </html>
