app starts but full of errors

--- a/about.html
+++ b/about.html
@@ -50,6 +50,6 @@
     </div>
 
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="js/about_start.js"></script>
+    <script type="text/javascript" src="ts/start/about_start.js"></script>
   </body>
 </html>
