--- a/debug_log.html
+++ b/debug_log.html
@@ -18,7 +18,7 @@
     <style></style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
   </body>
 
   <script type="text/javascript" src="js/debug_log_start.js"></script>
