--- a/background.html
+++ b/background.html
@@ -20,7 +20,7 @@
             img-src 'self' blob: data:;
             media-src 'self' blob:;
             object-src 'none';
-            script-src 'self' 'unsafe-eval';
+            script-src 'self' 'unsafe-inline';
             style-src 'self' 'unsafe-inline';"
     />
     <title>Session</title>
@@ -31,14 +31,17 @@
     <script type="text/javascript" src="js/libtextsecure.js"></script>
   </head>
 
-  <body>
-    <div class="app-loading-screen">
-      <div class="content session-full-logo">
-        <img src="images/session/brand.svg" class="session-brand-logo" />
-        <img src="images/session/session-text.svg" class="session-text-logo" />
+  <body id="body">
+    <div id="root">
+      <div class="app-loading-screen">
+        <div class="content session-full-logo">
+          <img src="images/session/brand.svg" class="session-brand-logo" />
+          <img src="images/session/session-text.svg" class="session-text-logo" />
+        </div>
       </div>
     </div>
-
-    <script type="text/javascript" src="ts/mains/main_renderer.js"></script>
+    <script type="text/javascript">
+      require('./ts/mains/main_renderer.js');
+    </script>
   </body>
 </html>
