--- a/password.html
+++ b/password.html
@@ -20,10 +20,12 @@
     <script type="text/javascript" src="js/components.js"></script>
   </head>
   <body>
-    <div class="app-loading-screen">
-      <div class="content session-full-logo">
-        <img src="images/session/brand.svg" class="session-brand-logo" />
-        <img src="images/session/session-text.svg" class="session-text-logo" />
+    <div id="root">
+      <div class="app-loading-screen">
+        <div class="content session-full-logo">
+          <img src="images/session/brand.svg" class="session-brand-logo" />
+          <img src="images/session/session-text.svg" class="session-text-logo" />
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="js/password_start.js"></script>
