mostly working but need to improve perfs

--- a/background.html
+++ b/background.html
@@ -26,7 +26,9 @@
     <title>Session</title>
     <link href="images/sesion/session_icon_128.png" rel="shortcut icon" />
     <link href="stylesheets/manifest.css" rel="stylesheet" type="text/css" />
-
+    <script>
+      var exports = {};
+    </script>
     <script type="text/javascript" src="js/components.js"></script>
     <script type="text/javascript" src="js/libtextsecure.js"></script>
   </head>
@@ -40,6 +42,9 @@
         </div>
       </div>
     </div>
+    <script>
+      var exports = {};
+    </script>
     <script type="text/javascript">
       require('./ts/mains/main_renderer.js');
     </script>
