--- a/password.html
+++ b/password.html
@@ -11,7 +11,7 @@
             img-src 'self' blob: data:;
             media-src 'self' blob:;
             object-src 'none';
-            script-src 'self';
+            script-src 'self' 'unsafe-inline';
             style-src 'self' 'unsafe-inline';"
     />
     <link href="stylesheets/manifest.css" rel="stylesheet" type="text/css" />
@@ -28,6 +28,8 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="js/password_start.js"></script>
+    <script type="text/javascript">
+      require('./ts/mains/password_start.js');
+    </script>
   </body>
 </html>
