feat: you can now choose where to save the debug logs
debug log window now follows the app theme, logs are save as txt

--- a/debug_log.html
+++ b/debug_log.html
@@ -15,6 +15,11 @@
             style-src 'self' 'unsafe-inline';"
     />
     <link href="dist/manifest.css" rel="stylesheet" type="text/css" />
+    <style>
+      body {
+        background-color: #000;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
