--- a/background.html
+++ b/background.html
@@ -25,7 +25,7 @@
     />
     <title>Session</title>
     <link href="images/sesion/session_icon_128.png" rel="shortcut icon" />
-    <link href="dist/manifest.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/dist/manifest.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body id="body">
