feat: starting theming work on left pane and commented on areas that will need to be fixed

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
     <style>
       body {
         text-align: center;
-        background-color: rgba(0, 0, 0);
-        color: white;
+        background-color: var(--background-primary-color);
+        color: var(--text-primary-color);
         font-size: 14px;
       }
 
@@ -29,7 +29,7 @@
       }
 
       a {
-        color: white;
+        color: var(--text-primary-color);
       }
     </style>
   </head>
