--- a/debug_log.html
+++ b/debug_log.html
@@ -17,7 +17,7 @@
     <link href="stylesheets/dist/manifest.css" rel="stylesheet" type="text/css" />
     <style>
       body {
-        background-color: #000;
+        background-color: var(--background-primary-color);
       }
     </style>
   </head>
