--- a/about.html
+++ b/about.html
@@ -15,40 +15,10 @@
             style-src 'self' 'unsafe-inline';"
     />
     <link href="stylesheets/dist/manifest.css" rel="stylesheet" type="text/css" />
-    <style>
-      body {
-        text-align: center;
-        background-color: var(--background-primary-color);
-        color: var(--text-primary-color);
-        font-size: 14px;
-      }
-
-      img {
-        margin-top: 1em;
-        padding: 12px;
-      }
-
-      a {
-        color: var(--text-primary-color);
-      }
-    </style>
   </head>
 
   <body>
-    <img src="images/session/session_icon.png" width="250" height="250" />
-
-    <div class="version"></div>
-    <div class="commitHash"></div>
-    <div class="environment"></div>
-    <div>
-      <a href="https://getsession.org">getsession.org</a>
-    </div>
-    <br />
-    <div>
-      <a class="privacy" href="https://getsession.org/privacy-policy">Privacy Policy</a><br />
-      <a class="privacy" href="https://getsession.org/terms-of-service/">Terms of Service</a>
-    </div>
-
+    <div id="root"></div>
     <script type="text/javascript">
       require('./ts/mains/about_start.js');
     </script>
