feat: refactored empty message view component
use styled components

--- a/password.html
+++ b/password.html
@@ -29,7 +29,7 @@
   <body>
     <div id="root">
       <div class="app-loading-screen">
-        <div class="content session-full-logo">
+        <div class="session-full-logo">
           <img src="images/session/brand.svg" class="session-brand-logo" />
           <img src="images/session/session-text.svg" class="session-text-logo" />
         </div>
