--- a/background.html
+++ b/background.html
@@ -31,7 +31,7 @@
   <body id="body">
     <div id="root">
       <div class="app-loading-screen">
-        <div class="content session-full-logo">
+        <div class="session-full-logo">
           <img src="images/session/brand.svg" class="session-brand-logo" />
           <img src="images/session/session-text.svg" class="session-text-logo" />
         </div>
