--- a/background.html
+++ b/background.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -25,6 +25,8 @@
     />
     <title>Session</title>
     <link href="images/session/session_icon.png" rel="shortcut icon" />
+    <!-- Load first to prevent font swapping on start -->
+    <link href="stylesheets/fonts.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/dist/manifest.css" rel="stylesheet" type="text/css" />
   </head>
 
